force-app/main/default/objects/Technical_Debt_Item__c/Technical_Debt_Item__c.object-meta.xml
<CustomObject>
    <label>Technical Debt Item</label>
    <nameField>
        <displayFormat>TDI-{0000}</displayFormat>
        <label>Technical Debt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technical Debt Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>