force-app/main/default/objects/Technical_Debt_Item__c/fields/Active_Issue__c.field-meta.xml
<CustomField>
    <fullName>Active_Issue__c</fullName>
    <formula>NOT(ISPICKVAL(Status__c, &quot;Resolved&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active Issue</label>
    <type>Checkbox</type>
</CustomField>