force-app/main/default/objects/Technical_Debt_Item__c/fields/Age_Score__c.field-meta.xml
<CustomField>
    <fullName>Age_Score__c</fullName>
    <formula>IF(
TODAY() - DATEVALUE(CreatedDate) &gt; 90,
30,
IF(
TODAY() - DATEVALUE(CreatedDate) &gt; 30,
20,
10
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>