force-app/main/default/objects/Technical_Debt_Item__c/fields/Assigned_Admin__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Admin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Assigned Admin</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Technical Debt Items</relationshipLabel>
    <relationshipName>Technical_Debt_Items</relationshipName>
    <type>Lookup</type>
</CustomField>