force-app/main/default/objects/Technical_Debt_Item__c/fields/Business_Impact_Score__c.field-meta.xml
<CustomField>
    <fullName>Business_Impact_Score__c</fullName>
    <formula>CASE(
Business_Impact__c,
&quot;High&quot;, 30,
&quot;Medium&quot;, 20,
&quot;Low&quot;, 10,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business_Impact_Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>