force-app/main/default/objects/Technical_Debt_Item__c/fields/Component_Name__c.field-meta.xml
<CustomField>
    <fullName>Component_Name__c</fullName>
    <description>Examples:
Contact Cleanup Flow
Lead Validation Rule
Opportunity Page Layout</description>
    <inlineHelpText>Examples:
Contact Cleanup Flow
Lead Validation Rule
Opportunity Page Layout</inlineHelpText>
    <label>Component Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>