force-app/main/default/objects/Technical_Debt_Item__c/fields/Debt_Rule__c.field-meta.xml
<CustomField>
    <fullName>Debt_Rule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Debt Rule</label>
    <referenceTo>Debt_Rule__c</referenceTo>
    <relationshipLabel>Technical Debt Items</relationshipLabel>
    <relationshipName>Technical_Debt_Items</relationshipName>
    <type>Lookup</type>
</CustomField>