force-app/main/default/objects/Technical_Debt_Item__c/fields/Final_Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Final_Risk_Score__c</fullName>
    <formula>Severity_Score__c +
Age_Score__c +
Business_Impact_Score__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Risk Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>