force-app/main/default/objects/Technical_Debt_Item__c/fields/Last_Reviewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reviewed_Date__c</fullName>
    <label>Last Reviewed Date</label>
    <type>Date</type>
</CustomField>