force-app/main/default/objects/Technical_Debt_Item__c/fields/Recommended_Fix__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Fix__c</fullName>
    <label>Recommended Fix</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>