force-app/main/default/objects/Technical_Debt_Item__c/fields/Risk_Score__c.field-meta.xml
<CustomField>
    <fullName>Risk_Score__c</fullName>
    <description>Examples:
25
50
75
100</description>
    <inlineHelpText>Examples:
25
50
75
100</inlineHelpText>
    <label>Risk Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>