force-app/main/default/objects/Technical_Debt_Item__c/fields/Severity_Score__c.field-meta.xml
<CustomField>
    <fullName>Severity_Score__c</fullName>
    <formula>CASE(
Severity__c,
&quot;Critical&quot;, 40,
&quot;High&quot;, 30,
&quot;Medium&quot;, 20,
&quot;Low&quot;, 10,
0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Severity Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>