force-app/main/default/objects/Technical_Debt_Item__c/fields/Target_Resolution_Date_c__c.field-meta.xml
<CustomField>
    <fullName>Target_Resolution_Date_c__c</fullName>
    <label>Target_Resolution_Date__c</label>
    <type>Date</type>
</CustomField>