force-app/main/default/objects/Technical_Debt_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Component_Name__c</columns>
    <columns>Debt_Type__c</columns>
    <columns>Status__c</columns>
    <columns>Last_Reviewed_Date__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Severity_Score__c</columns>
    <columns>Severity__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>