force-app/main/default/objects/Technical_Debt_Item__c/listViews/Highest_Risk_Items.listView-meta.xml
<ListView>
    <fullName>Highest_Risk_Items</fullName>
    <booleanFilter>1 AND 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Component_Name__c</columns>
    <columns>Severity__c</columns>
    <columns>Risk_Score__c</columns>
    <columns>Status__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Active_Issue__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>Risk_Score__c</field>
        <operation>greaterOrEqual</operation>
        <value>70</value>
    </filters>
    <label>Highest Risk Items</label>
</ListView>